--- a/css/CHSstyle.css
+++ b/css/CHSstyle.css
@@ -30,6 +30,25 @@ h5 {
 	font-weight: 700;
 	line-height: 20px;
 }
+.alert-box {
+	background-color: #fffbcc;
+	color: #777;
+	font-size: 14px;
+	line-height: 23px;
+	padding: 13px 16px;
+	text-align:center;
+	font-family:Arial, Helvetica, sans-serif;
+}
+.alert-box .badge {
+	background-color: #CB2400;
+	border-radius: 3px;
+	color: #fff;
+	margin-left: 4px;
+	margin-right: 4px;
+	padding: 3px 5px 3px 4px;
+	font-weight:bold;
+	text-transform: uppercase;
+}
 p.intro {
 	font-size: 16px;
 	margin: 12px 0 0;
