Auto Made New Blog Pages
Used python script to make new blog pages including new posts

--- a/css/Blogstyle.css
+++ b/css/Blogstyle.css
@@ -1,3 +1,5 @@
 .mySlides1 {display: none}
 .mySlides2 {display: none}
 .mySlides3 {display: none}
+.mySlides4 {display: none}
+.mySlides5 {display: none}
