COVID Banner Update
changed wording to include reopening date

--- a/css/CHSstyle.css
+++ b/css/CHSstyle.css
@@ -31,7 +31,7 @@ h5 {
 	line-height: 20px;
 }
 .alert-box {
-	background-color: #fffbcc;
+	background-color: #d1ecfe;
 	color: #777;
 	font-size: 14px;
 	line-height: 23px;
