Update Banner with Reopening and New Exhibit
A History of Photography in Chateaugay

--- a/css/CHSstyle.css
+++ b/css/CHSstyle.css
@@ -40,7 +40,7 @@ h5 {
 	font-family:Arial, Helvetica, sans-serif;
 }
 .alert-box .badge {
-	background-color: #CB2400;
+	background-color: #083f89;
 	border-radius: 3px;
 	color: #fff;
 	margin-left: 4px;
