--- a/css/CHSstyle.css
+++ b/css/CHSstyle.css
@@ -31,16 +31,16 @@ h5 {
 	line-height: 20px;
 }
 .alert-box {
-	background-color: #d1ecfe;
+	background-color: #d0e4d7;
 	color: #777;
 	font-size: 14px;
 	line-height: 23px;
 	padding: 13px 16px;
-	text-align:center;
+	text-align:left;
 	font-family:Arial, Helvetica, sans-serif;
 }
 .alert-box .badge {
-	background-color: #083f89;
+	background-color: #076d48;
 	border-radius: 3px;
 	color: #fff;
 	margin-left: 4px;
