--- a/css/CHSstyle.css
+++ b/css/CHSstyle.css
@@ -199,7 +199,7 @@ hr {
 	padding: 100px 0;
 	text-align: center;
 	color: #fff;
-	background: url(../img/ChatHist-086_e.jpg) no-repeat center top;
+	background: url(../img/ChatHist-086_color.jpg) no-repeat center top;
 	background-color: #800000;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
