--- a/css/Blogstyle.css
+++ b/css/Blogstyle.css
@@ -15,3 +15,5 @@
 .mySlides15 {display: none}
 .mySlides16 {display: none}
 .mySlides17 {display: none}
+.mySlides18 {display: none}
+.mySlides19 {display: none}
