Blog Post Python Generated
09/05 & 09/10 2021

--- a/css/Blogstyle.css
+++ b/css/Blogstyle.css
@@ -17,3 +17,5 @@
 .mySlides17 {display: none}
 .mySlides18 {display: none}
 .mySlides19 {display: none}
+.mySlides20 {display: none}
+.mySlides21 {display: none}
