Fixes to Exhibit Ad
Fixed spacing in title for mobile version so text wouldn't be overlapped. Double checked response text in paragraph block. Added h6 header properties to css to fix title spacing

--- a/css/CHSstyle.css
+++ b/css/CHSstyle.css
@@ -30,6 +30,11 @@ h5 {
 	font-weight: 700;
 	line-height: 20px;
 }
+h6 {
+	color: #121d1f;
+	font-weight: 400;
+	font-size: 34px;
+}
 .alert-box {
 	background-color: #DDFFE6;
 	color: #777;
