--- a/css/Exhibits.css
+++ b/css/Exhibits.css
@@ -199,6 +199,11 @@
   margin: 21px auto 0;
 }
 
+.u-section-2 .u-image-7 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url("../images/Exhibit_2023_Merrill House - color postcard.jpg");
+  background-position: 50% 45.87%;
+}
+
 @media (max-width: 1199px) {
   .u-section-2 .u-repeater-1 {
     min-height: 626px;
