--- a/css/Home.css
+++ b/css/Home.css
@@ -51,7 +51,7 @@
 }
 
 .u-section-1 .u-image-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("../images/chatlake1a21.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("../images/Snowflake-Background_e.png");
   background-position: 50% 50%;
 }
 
