2024 Summer Exhibit Content - Coming Soon
- Added poster and text info to Calendar of Events page
- Added Image and text to banner on Home page

--- a/css/Home.css
+++ b/css/Home.css
@@ -51,7 +51,7 @@
 }
 
 .u-section-1 .u-image-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("../images/Snowflake-Background_e.png");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("../images/2024-SummerExhibit_Photo_1958EastMainStreet_c.jpg");
   background-position: 50% 50%;
 }
 
