--- a/css/Exhibits.css
+++ b/css/Exhibits.css
@@ -209,6 +209,11 @@
   background-position: 50% 45.87%;
 }
 
+.u-section-2 .u-image-9 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url("../images/2024-SummerExhibit_Photo_1958EastMainStreet.jpg");
+  background-position: 50% 45.87%;
+}
+
 @media (max-width: 1199px) {
   .u-section-2 .u-repeater-1 {
     min-height: 626px;
