--- a/css/Beman.css
+++ b/css/Beman.css
@@ -1,13 +1,14 @@
  .u-section-1 {
-  background-image: none;
+  background-color: #D7CCBF;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 933px;
+  text-align: center;
+  min-height: 633px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 25px auto 0;
+    margin: 25px auto 0;
 }
 
 .u-section-1 .u-line-1 {
@@ -22,7 +23,7 @@
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 739px;
+  min-height: 439px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -30,7 +31,9 @@
 }
 
 .u-section-1 .u-text-2 {
+  text-align: justify;
   margin: 25px auto 0 0;
+  padding-left: 30px;
 }
 
 .u-section-1 .u-text-3 {
@@ -74,11 +77,16 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 737px;
+    min-height: 637px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 609px;
+    min-height: 300px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 20px;
+    padding-right: 40px;
   }
 
   .u-section-1 .u-image-1 {
@@ -89,7 +97,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 658px;
+    min-height: 558px;
   }
 
   .u-section-1 .u-layout-cell-1 {
@@ -97,8 +105,13 @@
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 20px;
+    padding-right: 40px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: -54px;
   }
 
   .u-section-1 .u-image-1 {
@@ -109,7 +122,21 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1454px;
+    min-height: 1000px;
+  }
+
+.u-section-1 .u-layout-cell-1 {
+    min-height: 250px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-top: 29px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+.u-section-1 .u-image-1 {
+    min-height: 500px;
   }
 
   .u-section-1 .u-text-1 {
@@ -124,24 +151,12 @@
   .u-section-1 .u-layout-wrap-1 {
     margin-top: 20px;
   }
-
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 724px;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-top: 29px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
+  
 
   .u-section-1 .u-text-2 {
     margin-top: 0;
   }
 
-  .u-section-1 .u-image-1 {
-    min-height: 570px;
-  }
 
   .u-section-1 .u-container-layout-2 {
     padding-left: 10px;
@@ -151,7 +166,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1402px;
+    min-height: 850px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
@@ -160,7 +175,7 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 822px;
+    min-height: 150px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -189,696 +204,343 @@
   .u-section-1 .u-image-1 {
     min-height: 366px;
   }
-}.u-section-2 .u-sheet-1 {
-  min-height: 987px;
 }
 
-.u-section-2 .u-layout-wrap-1 {
-  margin-top: 64px;
-  margin-bottom: 13px;
-}
-
-.u-section-2 .u-image-1 {
-  min-height: 910px;
-  background-image: url("../images/20160524_094842.jpg");
-  background-position: 27.19% 50%;
-}
-
-.u-section-2 .u-container-layout-1 {
-  padding: 30px 60px;
-}
-
-.u-section-2 .u-layout-cell-2 {
-  min-height: 909px;
-}
-
-.u-section-2 .u-container-layout-2 {
-  padding: 30px 60px 25px;
+.u-section-2 {
+  background-color: #C5C0AC;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 39px auto 0 0;
-}
+    text-align:center;
+    margin: 25px auto 0;
 
-.u-section-2 .u-text-2 {
-  margin: 32px 0 0;
-}
-
-.u-section-2 .u-text-3 {
-  font-weight: 700;
-  margin: 30px 0 0;
-}
-
-.u-section-2 .u-text-4 {
-  margin: 9px 0 0;
-}
-
-.u-section-2 .u-text-5 {
-  margin: 19px 0 0;
-}
-
-.u-section-2 .u-text-6 {
-  font-weight: 700;
-  margin: 38px 0 0;
-}
-
-.u-section-2 .u-text-7 {
-  margin: 19px 0 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1074px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    margin-bottom: 25px;
-  }
-
-  .u-section-2 .u-image-1 {
-    min-height: 750px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 750px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 367px;
-  }
-
-  .u-section-2 .u-image-1 {
-    background-position: 38.09% 50%;
-    min-height: 574px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 653px;
-  }
-
-  .u-section-2 .u-image-1 {
-    background-position: 34.85% 50%;
-    min-height: 738px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1369px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    margin-top: 6px;
-    margin-bottom: 6px;
-  }
-
-  .u-section-2 .u-image-1 {
-    min-height: 451px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 907px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-bottom: 6px;
-  }
-
-  .u-section-2 .u-text-1 {
-    width: auto;
-    margin-top: 0;
-  }
-
-  .u-section-2 .u-text-2 {
-    width: auto;
-    margin-top: 26px;
-  }
-
-  .u-section-2 .u-text-3 {
-    width: auto;
-    margin-top: 38px;
-  }
-
-  .u-section-2 .u-text-4 {
-    width: auto;
-    margin-top: 19px;
-  }
-
-  .u-section-2 .u-text-5 {
-    width: auto;
-    margin-top: 26px;
-  }
-
-  .u-section-2 .u-text-6 {
-    width: auto;
-    margin-top: 26px;
-  }
-
-  .u-section-2 .u-text-7 {
-    width: auto;
-  }
-}.u-section-3 .u-sheet-1 {
-  min-height: 102px;
-}
-
-.u-section-3 .u-text-1 {
-  font-weight: normal;
-  margin: 50px auto 0;
-}.u-section-4 .u-sheet-1 {
-  min-height: 850px;
-}
-
-.u-section-4 .u-layout-wrap-1 {
-  margin-top: 17px;
-  margin-bottom: 60px;
-}
-
-.u-section-4 .u-layout-cell-1 {
-  min-height: 777px;
+} .u-section-4 {
   background-image: none;
 }
 
+.u-section-4 .u-sheet-1 {
+  background-color: #C5C0AC;
+  min-height: 523px;
+}
+
+.u-section-4 .u-list-1 {
+  width: 1048px;
+  margin: 60px auto;
+}
+
+.u-section-4 .u-repeater-1 {
+  grid-template-columns: calc(25% - 15.75px) calc(25% - 15.75px) calc(25% - 15.75px) calc(25% - 15.75px);
+  grid-gap: 21px 21px;
+  min-height: 367px;
+}
+
+.u-section-4 .u-list-item-1 {
+  background-image: none;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .u-section-4 .u-container-layout-1 {
-  padding: 29px 30px;
+  padding: 0;
 }
 
 .u-section-4 .u-icon-1 {
-  height: 60px;
-  width: 60px;
-  margin: 0 auto;
-  padding: 0;
+  height: 64px;
+  width: 64px;
+  margin: 23px auto 0;
 }
 
 .u-section-4 .u-text-1 {
-  margin: 0 auto;
+  color: #5D392E;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 20px 30px 0;
 }
 
 .u-section-4 .u-text-2 {
-  font-style: italic;
-  margin: 19px -1px 0;
+  font-size: 0.875rem;
+  width: 187px;
+  margin: 11px auto 0;
 }
 
-.u-section-4 .u-btn-1 {
-  border-style: solid;
-  letter-spacing: 0px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin: 13px auto 0;
-}
-
-.u-section-4 .u-layout-cell-2 {
-  min-height: 777px;
+.u-section-4 .u-list-item-2 {
+  background-image: none;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-4 .u-container-layout-2 {
-  padding: 30px;
+  padding: 0;
 }
 
-.u-section-4 .u-icon-3 {
-  height: 61px;
-  width: 61px;
-  margin: 0 auto;
-  padding: 0;
+.u-section-4 .u-icon-2 {
+  height: 64px;
+  width: 64px;
+  margin: 23px auto 0;
 }
 
 .u-section-4 .u-text-3 {
-  margin: 0 auto;
+  color: #5D392E;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 20px 30px 0;
 }
 
 .u-section-4 .u-text-4 {
-  font-style: italic;
-  margin: 17px 0 0;
+  font-size: 0.875rem;
+  width: 187px;
+  margin: 11px auto 0;
 }
 
-.u-section-4 .u-btn-2 {
-  border-style: solid;
-  letter-spacing: 0px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin: -17px auto 0;
-}
-
-.u-section-4 .u-layout-cell-3 {
-  min-height: 777px;
+.u-section-4 .u-list-item-3 {
+  background-image: none;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-4 .u-container-layout-3 {
-  padding: 0 30px 30px;
-}
-
-.u-section-4 .u-icon-4 {
-  height: 60px;
-  width: 60px;
-  margin: 29px auto 0;
   padding: 0;
 }
 
+.u-section-4 .u-icon-3 {
+  height: 64px;
+  width: 64px;
+  margin: 23px auto 0;
+}
+
 .u-section-4 .u-text-5 {
-  margin: 0 auto;
+  color: #5D392E;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 20px 30px 0;
 }
 
 .u-section-4 .u-text-6 {
-  font-style: italic;
-  margin: 19px auto 0 -6px;
+  font-size: 0.875rem;
+  width: 187px;
+  margin: 11px auto 0;
 }
 
-.u-section-4 .u-btn-3 {
-  border-style: solid;
-  letter-spacing: 0px;
-  font-weight: 700;
+.u-section-4 .u-list-item-4 {
+  background-image: none;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-4 .u-container-layout-4 {
+  padding: 0;
+}
+
+.u-section-4 .u-icon-4 {
+  height: 64px;
+  width: 64px;
+  margin: 23px auto 0;
+}
+
+.u-section-4 .u-text-7 {
+  color: #5D392E;
   text-transform: uppercase;
+  font-weight: 700;
+  margin: 20px 30px 0;
+}
+
+.u-section-4 .u-text-8 {
+  font-size: 0.875rem;
+  width: 187px;
   margin: 11px auto 0;
+}
+
+.u-section-4 .u-btn-1 {
+  background-image: none;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 973px;
+    min-height: 483px;
   }
 
-  .u-section-4 .u-layout-wrap-1 {
-    margin-top: 23px;
-    margin-bottom: 23px;
+  .u-section-4 .u-list-1 {
+    width: 922px;
   }
 
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 927px;
-  }
-
-  .u-section-4 .u-container-layout-1 {
-    padding-left: 26px;
-    padding-right: 26px;
-  }
-
-  .u-section-4 .u-text-1 {
-    width: auto;
-    margin-top: 6px;
-  }
-
-  .u-section-4 .u-text-2 {
-    margin-top: 15px;
-    margin-left: 3px;
-    margin-right: 3px;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 927px;
-  }
-
-  .u-section-4 .u-icon-3 {
-    margin-top: -2px;
-  }
-
-  .u-section-4 .u-text-3 {
-    width: auto;
-    margin-top: 6px;
-  }
-
-  .u-section-4 .u-text-4 {
-    width: auto;
-    margin-top: 13px;
-    margin-left: -1px;
-    margin-right: -1px;
-  }
-
-  .u-section-4 .u-btn-2 {
-    margin-top: -8px;
-  }
-
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 927px;
-  }
-
-  .u-section-4 .u-text-5 {
-    width: auto;
-    margin-top: 6px;
-  }
-
-  .u-section-4 .u-text-6 {
-    width: auto;
-    margin-top: 15px;
-  }
-
-  .u-section-4 .u-btn-3 {
-    margin-top: 9px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 1232px;
-  }
-
-  .u-section-4 .u-layout-wrap-1 {
-    margin-top: 0;
-    margin-bottom: 30px;
-  }
-
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 1202px;
+  .u-section-4 .u-repeater-1 {
+    min-height: 327px;
   }
 
   .u-section-4 .u-container-layout-1 {
-    padding-left: 13px;
-    padding-right: 13px;
+    padding-left: 14px;
+    padding-right: 14px;
   }
 
   .u-section-4 .u-text-1 {
-    margin-top: 2px;
+    margin-left: 6px;
+    margin-right: 6px;
   }
 
   .u-section-4 .u-text-2 {
-    margin-top: 19px;
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-4 .u-btn-1 {
-    padding: 10px 0;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 1202px;
-  }
-
-  .u-section-4 .u-container-layout-2 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .u-section-4 .u-icon-3 {
-    margin-top: 0;
-  }
-
-  .u-section-4 .u-text-3 {
-    margin-top: -4px;
-  }
-
-  .u-section-4 .u-text-4 {
-    margin-top: 23px;
+    width: auto;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-4 .u-btn-2 {
-    margin-top: -15px;
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 14px;
+    padding-right: 14px;
   }
 
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 100px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 1628px;
-  }
-
-  .u-section-4 .u-layout-wrap-1 {
-    margin-bottom: 17px;
-  }
-
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 638px;
-  }
-
-  .u-section-4 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 378px;
-  }
-
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 562px;
-  }
-
-  .u-section-4 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 1868px;
-  }
-
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-4 .u-text-2 {
-    width: auto;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 100px;
+  .u-section-4 .u-text-3 {
+    margin-left: 6px;
+    margin-right: 6px;
   }
 
   .u-section-4 .u-text-4 {
-    margin-left: 4px;
-    margin-right: 4px;
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 100px;
+  .u-section-4 .u-container-layout-3 {
+    padding-left: 14px;
+    padding-right: 14px;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-left: 6px;
+    margin-right: 6px;
   }
 
   .u-section-4 .u-text-6 {
-    margin-left: -3px;
-    margin-right: -3px;
-  }
-} .u-section-5 {
-  background-image: none;
-  min-height: 617px;
-}
-
-.u-section-5 .u-layout-wrap-1 {
-  width: 1200px;
-  margin: 20px auto;
-}
-
-.u-section-5 .u-layout-cell-1 {
-  min-height: 528px;
-}
-
-.u-section-5 .u-container-layout-1 {
-  padding: 30px 60px;
-}
-
-.u-section-5 .u-text-1 {
-  margin: 13px auto 0;
-}
-
-.u-section-5 .u-text-2 {
-  font-size: 1rem;
-  margin: 26px 0 0;
-}
-
-.u-section-5 .u-btn-1 {
-  border-style: solid;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0px;
-  margin: 26px auto 0;
-}
-
-.u-section-5 .u-btn-2 {
-  border-style: solid;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0px;
-  margin: 26px auto 0;
-}
-
-.u-section-5 .u-image-1 {
-  background-image: url("../images/NewsletterSamplePage.png");
-  background-position: 50% 50%;
-  min-height: 528px;
-}
-
-.u-section-5 .u-container-layout-2 {
-  padding: 30px 60px;
-}
-
-@media (max-width: 1199px) {
-   .u-section-5 {
-    min-height: 653px;
-  }
-
-  .u-section-5 .u-layout-wrap-1 {
-    width: 1027px;
-    margin-top: 22px;
-    margin-bottom: 22px;
-  }
-
-  .u-section-5 .u-layout-cell-1 {
-    min-height: 524px;
-  }
-
-  .u-section-5 .u-container-layout-1 {
-    padding-top: 0;
-    padding-left: 31px;
-    padding-right: 31px;
-  }
-
-  .u-section-5 .u-text-1 {
-    margin-top: 0;
-  }
-
-  .u-section-5 .u-text-2 {
     width: auto;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-5 .u-image-1 {
-    min-height: 524px;
+  .u-section-4 .u-container-layout-4 {
+    padding-left: 14px;
+    padding-right: 14px;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+
+  .u-section-4 .u-text-8 {
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
-   .u-section-5 {
-    min-height: 615px;
+  .u-section-4 .u-sheet-1 {
+    min-height: 733px;
   }
 
-  .u-section-5 .u-layout-wrap-1 {
-    width: 787px;
-    margin-top: 21px;
-    margin-bottom: 21px;
+  .u-section-4 .u-list-1 {
+    height: auto;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
-  .u-section-5 .u-layout-cell-1 {
-    min-height: 563px;
+  .u-section-4 .u-repeater-1 {
+    grid-template-columns: calc(50% - 10.5px) calc(50% - 10.5px);
+    min-height: 613px;
   }
 
-  .u-section-5 .u-container-layout-1 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .u-section-5 .u-text-2 {
-    font-size: 0.875rem;
-    margin-top: 13px;
+  .u-section-4 .u-text-1 {
+    margin-left: 0;
     margin-right: 0;
-    margin-left: 13px;
   }
 
-  .u-section-5 .u-btn-1 {
-    margin-top: 13px;
+  .u-section-4 .u-text-3 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-5 .u-btn-2 {
-    margin-top: 13px;
-    margin-right: 49px;
+  .u-section-4 .u-text-5 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-5 .u-image-1 {
-    min-height: 563px;
+  .u-section-4 .u-text-7 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-5 .u-container-layout-2 {
-    padding-left: 30px;
-    padding-right: 30px;
+  .u-section-4 .u-btn-1 {
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
 @media (max-width: 767px) {
-   .u-section-5 {
-    min-height: 1289px;
+  .u-section-4 .u-sheet-1 {
+    min-height: 1193px;
   }
 
-  .u-section-5 .u-layout-wrap-1 {
-    width: 540px;
+  .u-section-4 .u-repeater-1 {
+    grid-template-columns: 100%;
+    min-height: 637px;
   }
 
-  .u-section-5 .u-layout-cell-1 {
-    min-height: 100px;
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 12px;
   }
 
-  .u-section-5 .u-text-2 {
-    margin-left: 7px;
-    margin-right: 7px;
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 12px;
   }
 
-  .u-section-5 .u-btn-2 {
-    margin-right: auto;
+  .u-section-4 .u-container-layout-3 {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 69px;
   }
 
-  .u-section-5 .u-image-1 {
-    min-height: 724px;
-  }
-
-  .u-section-5 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-section-4 .u-container-layout-4 {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 69px;
   }
 }
 
 @media (max-width: 575px) {
-   .u-section-5 {
-    min-height: 1047px;
+  .u-section-4 .u-sheet-1 {
+    min-height: 1292px;
   }
 
-  .u-section-5 .u-layout-wrap-1 {
-    width: 340px;
+  .u-section-4 .u-repeater-1 {
+    min-height: 1155px;
   }
 
-  .u-section-5 .u-container-layout-1 {
-    padding-top: 24px;
-    padding-bottom: 24px;
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
-  .u-section-5 .u-text-1 {
-    width: auto;
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
-  .u-section-5 .u-text-2 {
-    margin-top: 14px;
-    margin-left: 12px;
-    margin-right: 12px;
+  .u-section-4 .u-container-layout-3 {
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
-  .u-section-5 .u-btn-1 {
-    margin-top: 14px;
-  }
-
-  .u-section-5 .u-btn-2 {
-    margin-top: 14px;
-  }
-
-  .u-section-5 .u-image-1 {
-    min-height: 456px;
-    background-position: 50% 0%;
+  .u-section-4 .u-container-layout-4 {
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
