--- a/css/Beman.css
+++ b/css/Beman.css
@@ -66,9 +66,9 @@
 }
 
 .u-section-1 .u-image-1 {
-  min-height: 409px;
-  background-image: url("../images/BemanKiosk-InProgress_2024.jpg");
-  background-position: 70.75% 50%;
+  min-height: 300px;
+  background-image: url("../images/BemanKiosk_2025.jpg");
+  background-position: 0% 0%;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -90,8 +90,8 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 337px;
-    background-position: 59.52% 50%;
+    min-height: 275px;
+    background-position: 0% 0%;
   }
 }
 
@@ -115,14 +115,14 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 258px;
-    background-position: 54.04% 50%;
+    min-height: 225px;
+    background-position: 60% 0%;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1000px;
+    min-height: 900px;
   }
 
 .u-section-1 .u-layout-cell-1 {
@@ -136,7 +136,7 @@
   }
 
 .u-section-1 .u-image-1 {
-    min-height: 500px;
+    min-height: 350px;
   }
 
   .u-section-1 .u-text-1 {
@@ -157,7 +157,6 @@
     margin-top: 0;
   }
 
-
   .u-section-1 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
@@ -166,7 +165,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 850px;
+    min-height: 750px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
@@ -202,7 +201,7 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 366px;
+    min-height: 225px;
   }
 }
 
