--- a/css/Home.css
+++ b/css/Home.css
@@ -90,8 +90,8 @@
 }
 
 .u-section-1 .u-image-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("../images/CCS-MarchingBandUnifroms_Cropped.jpg");
-  background-position: 50% 50%;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("../images/HeritageTrailCover-Map.png");
+  background-position: 25% 25%;
 }
 
 .u-section-1 .u-container-layout-3 {
