--- a/css/Exhibits.css
+++ b/css/Exhibits.css
@@ -214,6 +214,11 @@
   background-position: 50% 45.87%;
 }
 
+.u-section-2 .u-image-10 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url("../images/2025-SummerExhibit-Founders.jpg");
+  background-position: 50% 45.87%;
+}
+
 @media (max-width: 1199px) {
   .u-section-2 .u-repeater-1 {
     min-height: 626px;
